Corrected overflow error

--- a/frontend/public/styles/profile.css
+++ b/frontend/public/styles/profile.css
@@ -261,7 +261,6 @@ li {
 @media (max-width: 768px) {
   body {
     overflow-x: hidden;
-    min-height: 165vh;
 }
   header {
    animation-range: 0 500px;
@@ -279,6 +278,13 @@ li {
     background-color: transparent;
     border: none;
     box-shadow: none;
+
+ }
+
+ .profile {
+    display: flex;
+    flex-direction: column;
+    height: auto;
  }
 
  .button-25 {
